@@ -1,3 +1,9 @@
+2015-05-09  Per Bothner  <per@bothner.com>
+
+	* PushApply.java: Add can-finish checking for block-exit.
+	(visitBlockExp, visitExitExp): New methods.
+	(CanFinishTracker.associatedExpression): New field.
+
 2015-05-05  Per Bothner  <per@bothner.com>
 
 	* NameLookup.java (getInstance, setInstance): Don't implement
